--- a/mozilla_frontpage/index.html
+++ b/mozilla_frontpage/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
 
     <!--Pull in Mozilla-ish font for branding purposes-->
-    <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Signika:300,400,700;" rel="stylesheet">
 
     <!-- Then load our own custom CSS -->
     <link rel="stylesheet" type="text/CSS" href="stylesheet.css" />
@@ -470,7 +470,88 @@
                 </form>
             </div>
         </div>
+    </div>
+    <div class="container-fullwidth footer">
+        <div class="row clearfix">
+            <div class="col-md-4 copyright-notice">
+                <h3>
+                    <a href="#">Mozilla</a>
+                </h3>
+                <p>
+                    Portions of this content are &copy;1998–2016 by individual mozilla.org contributors. Content available under a <a href="https://www.mozilla.org/en-US/foundation/licensing/website-content/">Creative Commons License</a>.
+                </p>
+            </div>
+            <div class="col-md-2">
+                <ul class="about-us">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Donate</a>
+                    </li>
+                    <li>
+                        <a href="#">Contribute to this site</a>
+                    </li>
 
+                </ul>
+                <ul class="privacy">
+                    <li>
+                        <a href="#">Privacy</a>
+                    </li>
+                    <li>
+                        <a href="#">Cookies</a>
+                    </li>
+                    <li>
+                        <a href="#">Legal</a>
+                    </li>
+                    <li>
+                        <a href="#">Report Trademark Abuse</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-md-offset-1">
+                <ul class="social-links">
+                    <li>
+                        Mozilla:
+                        <ul class="moz-social">
+                            <li>
+                                <a href="#">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="#">Facebook</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Firefox:
+                        <ul  class="ff-social">
+                            <li>
+                                <a href="#">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="#">Facebook</a>
+                            </li>
+                            <li>
+                                <a href="#">YouTube</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="form-group">
+                    Page language:
+                    <label for="page-language"></label>
+                    <select class="form-control" id="page-language">
+                        <option>Deutsch</option>
+                        <option selected="selected">English</option>
+                        <option>Español</option>
+                        <option>Polski</option>
+                    </select>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
